# server-demo

./: .gitignore  AGENTS.md  App.tsx  Makefile  README copy.md  README.md  app.json  package copy.json  package-lock.json  pnpm-lock.yaml  pr.patch
.changeset/: funky-pans-swim.md  smart-schools-find.md
PARA/: .gitignore  Dockerfile  Dockerfile.bskylink  Dockerfile.bskyogcard  Dockerfile.embedr  Makefile  README.md  WEB_DESKTOP_ANALYSIS.md  agents.md  app.config.js  babel.config.js  conductor.json  crowdin.yml  db_schema.dbml  debug-feed-tuner.ts  eas.json  emoji.patch  eslint-supressions.json  eslint.config.mjs  eslint_errors2.txt  eslint_report.json  final_lint_report.txt  lingui.config.ts  lint_report.txt  metro.config.js  (+8 more)
m8/pds-moover-main/:  LICENSE.md  .dockerignore  .env.template  .gitignore  .oxlintrc.json  Cargo.toml  README.md  compose.dev.yml  compose.selfhost.yml  justfile
m8/pds-moover-main/.sqlx/: query-1c5100b56d6f3ae0ca0c349ec965f1fa55da9528825e2a564ff1d1553a5348fe.json  query-497e2177f276a57fa5fe513c20fa2826a84da60f9f6d03e31342eade571f0bb5.json  query-9cc605a9c9d05432183935344a1c610000ffaee17e84b8839786939ad53ec029.json
m8/pds-moover-main/.zed/: settings.json
m8/pds-moover-main/Dockerfiles/: cron-worker.Dockerfile  web-ui.Dockerfile  web.Dockerfile  worker.Dockerfile
m8/pds-moover-main/ProductionComposes/: Caddyfile  compose.web.yml  compose.workers.yml
m8/pds-moover-main/admin_cli/: Cargo.toml
m8/pds-moover-main/admin_cli/src/: main.rs
m8/pds-moover-main/cron-worker/: Cargo.toml
m8/pds-moover-main/cron-worker/src/: main.rs
m8/pds-moover-main/lexicon_types_crate/: Cargo.toml
m8/pds-moover-main/lexicon_types_crate/src/: builder_types.rs  com_atproto.rs  com_pdsmoover.rs  lib.rs
m8/pds-moover-main/lexicon_types_crate/src/app_bsky/: actor.rs  feed.rs
m8/pds-moover-main/lexicon_types_crate/src/com_atproto/: sync.rs
m8/pds-moover-main/lexicon_types_crate/src/com_pdsmoover/: admin.rs  backup.rs  server.rs
m8/pds-moover-main/lexicon_types_crate/src/com_pdsmoover/admin/: remove_pds.rs  remove_repo.rs  request_backup.rs  request_instance_backup.rs  request_pds_backup.rs  request_repo_backup.rs  sign_up_pds.rs
m8/pds-moover-main/lexicon_types_crate/src/com_pdsmoover/backup/: describe_server.rs  get_repo_status.rs  remove_repo.rs  request_backup.rs  sign_up.rs
m8/pds-moover-main/lexicons/app/bsky/actor/: defs.json
m8/pds-moover-main/lexicons/app/bsky/feed/: postgate.json  threadgate.json
m8/pds-moover-main/lexicons/com/atproto/sync/: getBlob.json  getRepo.json  listBlobs.json
m8/pds-moover-main/lexicons/com/pdsmoover/admin/: removePds.json  removeRepo.json  requestInstanceBackup.json  requestPdsBackup.json  requestRepoBackup.json  signUpPds.json
m8/pds-moover-main/lexicons/com/pdsmoover/backup/: describeServer.json  getRepoStatus.json  removeRepo.json  requestBackup.json  signUp.json
m8/pds-moover-main/shared/: Cargo.toml
m8/pds-moover-main/shared/migrations/: 20251012203013_accounts.up.sql  20251012210012_blobs.up.sql  20251012214842_pds_hosts.up.sql  20251015201900_missing_blobs.down.sql  20251015201900_missing_blobs.up.sql  20251016092200_network_backup_runs.sql  20251016131227_pds_host_last_backup_Start.sql  20251017124800_add_last_backup_started_to_accounts.up.sql  20260214022210_blobs_unique_account_cid.up.sql
m8/pds-moover-main/shared/src/: lib.rs  storage.rs
m8/pds-moover-main/shared/src/db/: mod.rs  models.rs
m8/pds-moover-main/shared/src/jobs/: account_backup.rs  mod.rs  pds_backup.rs  remove_repo.rs  scheduled_back_up_start.rs  start_all_backup.rs  upload_blob.rs  verify_backups.rs
m8/pds-moover-main/web/: Cargo.toml
m8/pds-moover-main/web-ui/: .gitignore  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json
m8/pds-moover-main/web-ui/src/: app.d.ts  app.html
m8/pds-moover-main/web-ui/src/lib/: types.ts
m8/pds-moover-main/web-ui/src/lib/assets/: style.css
m8/pds-moover-main/web-ui/src/lib/components/: Captcha.svelte  LoadingSpinner.svelte  MooHeader.svelte  NavBar.svelte  OgImage.svelte  RotationKeyDisplay.svelte
m8/pds-moover-main/web-ui/src/lib/utils/: displayUtils.ts
m8/pds-moover-main/web-ui/src/routes/: +layout.svelte  +page.svelte  +page.ts
m8/pds-moover-main/web-ui/src/routes/backups/: +page.svelte  RepoStatus.svelte  SignUpForm.svelte
m8/pds-moover-main/web-ui/src/routes/info/: +page.svelte
m8/pds-moover-main/web-ui/src/routes/missing-blobs/: +page.svelte
m8/pds-moover-main/web-ui/src/routes/moover/[[pds]]/: +page.server.ts  +page.svelte  SignThePapers.svelte
m8/pds-moover-main/web-ui/src/routes/restore/: +page.server.ts  +page.svelte
m8/pds-moover-main/web-ui/src/routes/rotation-key/: +page.svelte
m8/pds-moover-main/web-ui/src/routes/terms/: +page.svelte
m8/pds-moover-main/web-ui/src/routes/turn-off/: +page.svelte
m8/pds-moover-main/web-ui/src/routes/turnoff.html/: +server.ts
m8/pds-moover-main/web/src/: main.rs
m8/pds-moover-main/web/src/handlers/: mod.rs  well_known.rs
m8/pds-moover-main/web/src/handlers/xrpc/: com_atproto_sync.rs  com_pdsmoover_admin_handlers.rs  com_pdsmoover_backup_handlers.rs  mod.rs
m8/pds-moover-main/web/templates/: backups.askama.html  error.askama.html  index.askama.html  info.askama.html  layout.askama.html  missing-blobs.askama.html  moover.askama.html  restore.askama.html  rotation-key.askama.html  terms.askama.html  turn-off.askama.html
m8/pds-moover-main/web/templates/partials/: cow-header.askama.html  rotation_key_display.askama.html
m8/pds-moover-main/worker/: Cargo.toml
m8/pds-moover-main/worker/src/: main.rs
(+2160 files in other folders)
