[package]
name = "cron-worker"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
apalis.workspace = true
apalis-sql.workspace = true
apalis-cron.workspace = true
dotenvy.workspace = true
tracing-subscriber.workspace = true
shared.workspace = true
log.workspace = true
tower = { version = "0.5.2", features = ["load-shed"] }
tokio.workspace = true
