[package]
name = "web"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
axum = { version = "0.8.6", features = ["macros", "json"] }
atproto-identity.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow.workspace = true
log.workspace = true
shared = { path = "../shared" }
tower-http = { version = "0.6.1", features = ["fs", "trace", "cors"] }
tower = { version = "0.5.1", features = ["util"] }
jacquard-axum.workspace = true
jacquard-common.workspace = true
jacquard-api.workspace = true
lexicon_types_crate.workspace = true
axum-macros = "0.5.0"
p256 = "0.13.2"
jwt-compact.workspace = true
jacquard-identity.workspace = true
reqwest = { version = "0.12", default-features = true, features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
#shared.workspace = true
apalis.workspace = true
apalis-sql.workspace = true
base64 = "0.22"
rust-s3.workspace = true
async-compression.workspace = true
tokio-util = { version = "0.7.16", features = ["compat"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
chrono.workspace = true
tower_governor = "0.8.0"
