[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
apalis.workspace = true
apalis-sql.workspace = true
tokio.workspace = true
dotenvy.workspace = true
tracing-subscriber.workspace = true
shared.workspace = true
log.workspace = true
rust-s3.workspace = true
reqwest.workspace = true
